--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "ai-service-hub": "^2.0.5",
+    "ai-service-hub": "^2.0.6",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "sqlite3": "^5.1.7"
   }
 }
