--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "scrape-gofin-pkd",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "nodemon": "^3.1.9",
     "sqlite3": "^5.1.7"
   }
 }
