--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "typescript": "^5.7.3"
   },
   "dependencies": {
     "ai-service-hub": "^2.0.6",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
