--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "scrape-gofin-pkd",
+  "name": "pkd-code-finder",
+  "description": "A service that helps find appropriate PKD codes for business activities using AI and vector search",
   "version": "1.0.1",
   "main": "index.js",
   "scripts": {
@@ -10,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
